// Context

1. Scanner 동작
	- Scanner MOF & Step&Go Proesss 기능 추가
	- Scanner 동작 테스트 진행
2. Image 및 Object List 저장
	- BMP file 세로를 8배로 Expand하여 저장하는 기능 추가
	- BinaryFomatter 방식으로 List 구조를 저장 및 불러오기 기능 추가
3. Scanner SW 구조 변경
	- Scanner내부 manager,window, object,form 클래스를 외부에서 생성해서 refcomp로 참조 방식에서
	  static 클래스인 MarkingBase의 static 참조 방식의 포인터로 접근함.(확장 메소드 Extension Method 방식)

////////////////////////////////////////////////////////////////////////////////////////////
// LHS
// Version : 0.0.1
// Grade : ★
// Date : 2016-03-07
// Context
1. MDataManager -> CSystemData -> Scanner ini Data 관리를 위한 Class 배열 선언.
2. MLWDicer -> CreatePolygonScanner() Scanner 갯수 만큼 Hardware Layer 생성하는 Function 추가. : Scanner Max 4 ea
3. UI - FormMessageBox 추가
4. UI - FormLaserMaint Scanner IP, Port 입력 추가

// Version : 0.0.2
// Grade : ★
// Date : 2016-03-21
// Context
// * Polygon Scanner Interface 보완
// 1. TFTP 통신 Protocol 추가
//   - InitializeTFTP()
//   - SendTFTPFile(string strIP, string strFilePath)
// 2. COM Serial 통신 Debugging 수정
//   - Event Handler 생성 해제 위치 변경
//   - Receive Event Byte 사이즈 Read로 변경
// 3. Scanner Interface Test를 위한 Manual UI 추가
//   - FormLaserMaint 
// 4. ImageSave 1빈트 단색 Bitmap 형식으로 저장하도록 수정

// Version : 0.0.3
// Grade : ★
// Date : 2016-03-28
// Context
// * UI 변경
// 1. Axis Operation UI 추가
// 2. IO Operation UI 추가
// 3. Excel IO List Load 추가
//  -  MDataManager -> LoadExcelIOList()
//  - IO List 경로 SFA\LWDicer\SystemData\LWDicer_IO_List.xlsx

// Version : 0.0.4
// Grade : ★
// Date : 2016-04-04
// Context
// * UI 변경
// 1. Axis Operation UI 추가
// 2. Motor Parameter UI 추가 / Motor Parameter Excel File Load,Save 구문 추가
//  - MDataManager -> ExportMotorDataFromExcel(string [,] strParameter)
//  - Motor Data 경로 SFA\LWDicer\SystemData\SystemData.xlsx

// Version : 0.0.5
// Grade : ★
// Date : 2016-04-11
// Context
// * UI 변경
// 1. Scanner Image 편집 UI 추가

// Version : 0.0.6
// Grade : ★
// Date : 2016-04-27
// Context
// 1. Spinner Mechanical Layer 추가